tests/vertical-slice/accept/lambda_callable_send.hew
// Accept fixture: send-shaped lambda actor with call-syntax dispatch.
// `actor |s: string| { ... }` produces `LambdaPid<string, ()>`.
// Call `log("x")` returns `Result<(), SendError>` at the type level.
// WASM-PASS: type-check level only for slice 2; runtime landing is slice 4.
fn main() {
    let log = actor |s: string| {
        println(s);
    };
    log("hello");
}
