tests/vertical-slice/reject/lambda_self_escape.hew
// Reject fixture: E_LAMBDA_SELF_ESCAPE
// An actor lambda body must not return an actor handle (actor handle escape).
// The actor handle's lifetime is bound to the let-binding site, not to values
// the body produces. Returning a LambdaPid leaks a strong reference outside the
// actor boundary.
// Expected: type error containing "E_LAMBDA_SELF_ESCAPE"
fn main() {
    let inner = actor |x: i64| {
        println(x);
    };
    // The outer actor body returns inner — leaking a lambda-actor handle.
    // This is rejected at the checker level (E_LAMBDA_SELF_ESCAPE).
    let _outer = actor |_n: i64| -> LambdaPid<i64, ()> {
        inner
    };
}
